--- a/README.Rmd
+++ b/README.Rmd
@@ -97,11 +97,11 @@ The nested sampling algorithm was first developed and introduced by J. Skilling 
 - Skilling, J. (2004). Nested sampling. In R. Fischer and R. Preuss and U. V. Toussaint (Eds.), _Bayesian Inference and Maximum Entropy Methods in Science and Engineering_ (pp. 395-405). AIP. [10.1063/1.1835238](https://doi.org/10.1063/1.1835238)
 - Skilling, J. (2006). Nested sampling for general Bayesian computation. _Bayesian Analysis_, 1(4), 833-859. [10.1214/06-BA127](https://doi.org/10.1214/06-BA127)
 
-ernest's design takes much inspiration from from the excellent [dynesty](https://dynesty.readthedocs.io/en/stable/index.html) package, and from its stellar documentation.
+ernest's design takes much inspiration from from the well-documented [dynesty](https://dynesty.readthedocs.io/en/stable/index.html) package:
 
 - Speagle, J. S. (2020). DYNESTY: A dynamic nested sampling package for estimating Bayesian posteriors and evidences. _Monthly Notices of the Royal Astronomical Society_, 493(3), 3132-3158. [10.1093/mnras/staa278](https://doi.org/10.1093/mnras/staa278)
 - Koposov, S., Speagle, J. S., Barbary, K., Ashton, G., Bennett, E., Buchner, J., Scheffler, C., Cook, B., Talbot, C., Guillochon, J., Cubillos, P., Ramos, A. A., Dartiailh, M., Ilya., Tollerud, E., Lang, D., Johnson, B., jtmendel, Higson, E., ... Goldstein, D. (2021). _dynesty_ (Version 1.1.1.) [Python package]. [10.5281/zenodo.4543937](https://doi.org/10.5281/zenodo.4543937)
 
-In addition, the [nestle](https://github.com/kbarbary/nestle/tree/master) python package and an article from J. Buchner provided consistent and clear terminology to describe and organize components of the nested sampling algorithm:
+In addition, the [nestle](https://github.com/kbarbary/nestle/tree/master) python package and an article from J. Buchner provide consistent and clear terminology to describe and organize components of the nested sampling algorithm:
 
 - Buchner, J. (2023). Nested sampling methods. _Statistics Surveys_, 17, 169-215. [10.1214/23-SS144](https://doi.org/10.1214/23-SS144)
